Ide navigation implemented

--- a/Development/TomPIT.Ide.UI/Views/Ide/Console.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Console.cshtml
@@ -5,7 +5,9 @@
 		<div id="devExplorer" tabindex="0">
 			<div id="devExplorerToolbar" class="btn-toolbar">
 				<div class="btn-group btn-group-sm">
-					<button class="btn btn-sm btn-light" id="exBtnCollapse" title="Collapse all nodes"><i class="fal fa-minus-square"></i></button>
+                    <button class="btn btn-sm btn-light" id="exBtnPreviousView" title="Previous selection"><i class="fal fa-chevron-left"></i></button>
+                    <button class="btn btn-sm btn-light" id="exBtnNextView" title="Next selection"><i class="fal fa-chevron-right"></i></button>
+                    <button class="btn btn-sm btn-light" id="exBtnCollapse" title="Collapse all nodes"><i class="fal fa-minus-square"></i></button>
 				</div>
 			</div>
 			<div id="devExplorerNodes">
