--- a/Development/TomPIT.Ide.UI/Views/Ide/Designers/Collection.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Designers/Collection.cshtml
@@ -119,7 +119,7 @@
                         action: 'move',
                         section:'designer',
                     id: $(ui.item).attr('data-id'),
-                        index: ui.item.position,
+                        index: ui.item.index(),
                         oldIndex: $(this).attr('data-previndex')
                      }
             });
