Completion bug fixes

--- a/Development/TomPIT.Ide.UI/Views/Ide/Selection/AddItems.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Selection/AddItems.cshtml
@@ -47,7 +47,8 @@ else
 				'item': $(this).attr('data-id')
 			},
 			onComplete: function (data) {
-				$('#devDesigner').html(data);
+                $('#devDesigner').html(data);
+                ide.showDesigner();
 			}
 		})
 	});
