--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/designers.less
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/designers.less
@@ -30,6 +30,12 @@
     font-weight: normal;
 }
 
+.dev-property-grid .dx-widget input,
+.dev-property-grid .dx-widget select,
+.dev-property-grid .dx-widget textarea{
+    font-size: 0.8rem;
+}
+
 .dx-widget input {
     font-weight: 700;
     color: @Grey800;
