--- a/Development/TomPIT.Ide.UI/Views/Ide/Console.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Console.cshtml
@@ -21,7 +21,7 @@
             <div class="template-toolbar btn-toolbar justify-content-between">
                 <div class="btn-group">
                     <a id="btnDebug" href="#" target="_blank" class="btn btn-sm btn-light collapse" title="Download source code for debugging"><i class="fal fa-bug"></i></a>
-                    
+
                 </div>
                 <div class="btn-group">
                     <span class="pt-2 small collapse" title="Editor syntax" id="labelSyntaxLanguage"></span>
@@ -40,5 +40,9 @@
 	</div>
 </div>
 <div class="row no-gutters dev-footer bg-dark" id="devStatus">
-
+    <span id="devStatusErrors" class="px-2"></span>
+    <span id="devStatusText" class="px-2"></span>
+</div>
+<div class="collapse ide-errors-panel" id="ideErrors">
+    
 </div>
