--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.css
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.css
@@ -220,7 +220,7 @@ h4.dev-title {
   bottom: 40px;
 }
 .text-editor-sa {
-  height: calc(100vh - 121px) !important;
+  height: calc(100vh - 122px) !important;
 }
 .text-editor-int {
   height: calc(100vh - 350px) !important;
@@ -231,6 +231,25 @@ h4.dev-title {
   border: 0;
   width: 100%;
   min-height: 75px;
+}
+.ide-errors-panel {
+  position: fixed;
+  bottom: 25px;
+  width: 100%;
+  background-color: #f5f5f5;
+  font-family: Consolas, 'Lucida Console';
+  font-size: 0.8rem;
+  border-top: 1px solid #e0e0e0;
+}
+.ide-errors-panel:focus {
+  outline: none;
+}
+.ide-errors-panel ul {
+  margin: 0;
+}
+.ide-errors-panel li {
+  padding: 0 15px;
+  border-bottom: 1px dotted #9e9e9e;
 }
 .designer-title {
   padding-bottom: 5px;
@@ -254,6 +273,9 @@ h4.dev-title {
 .dev-signature {
   padding: 5px;
   font-family: Consolas, 'Lucida Console', Courier New, Courier, monospace;
+}
+.clickable {
+  cursor: pointer;
 }
 .reflector-type {
   cursor: pointer;
