--- a/Development/TomPIT.Ide.UI/Views/Ide/Designers/FileManager.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Designers/FileManager.cshtml
@@ -18,7 +18,7 @@
 </div>
 <script>
     $('#editFileManager').dxFileManager({
-         fileProvider: new DevExpress.FileProviders.WebApi({
+         fileProvider: new DevExpress.fileProviders.Remote({
              endpointUrl: "@url",
              thumbnailExpr:'icon'
          }),
