Installer component introduced

--- a/Development/TomPIT.Development.UI/Views/Shared/Header.cshtml
+++ b/Development/TomPIT.Development.UI/Views/Shared/Header.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="~/Assets/Fonts/OpenSans/opensans.css" />
     <link rel="stylesheet" type="text/css" href="~/Assets/Styles/bootstrap/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="~/assets/libraries/devextreme/Latest/dx.common.css" />
+    @*<link rel="stylesheet" type="text/css" href="~/assets/libraries/devextreme/Latest/dx.light.css" />*@
     <link rel="stylesheet" type="text/css" href="~/assets/libraries/devextreme/Latest/dx.material.blue.light.css" />
     <link rel="stylesheet" type="text/css" href="~/Assets/Styles/iot.css" />
     <link rel="stylesheet" type="text/css" href="~/Assets/Styles/ide.css" />
