--- a/Reporting/TomPIT.Reporting.Design/Views/Ide/Designers/Report.cshtml
+++ b/Reporting/TomPIT.Reporting.Design/Views/Ide/Designers/Report.cshtml
@@ -18,9 +18,28 @@
             e.GetById(DevExpress.Reporting.Designer.Actions.ActionId.AddMultiQuerySqlDataSource).visible = false;
             e.GetById(DevExpress.Reporting.Designer.Actions.ActionId.SaveAs).visible = false;
             e.GetById(DevExpress.Reporting.Designer.Actions.ActionId.Exit).visible = false;
+
+            e.Actions.push({
+                text: "Add API",
+                imageTemplateName: "addApiIcon",
+                visible: true,
+                disabled: false,
+                hasSeparator: false,
+                hotKey: { ctrlKey: true, keyCode: "D".charCodeAt(0) },
+                clickAction: function () {
+                    $('#addApi').modal();
+                }
+            });
         }
     </script>
 
+    <script type="text/html" id="addApiIcon">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             viewBox="0 0 24 24" style="enable-background: new 0 0 24 24;" xml:space="preserve">
+        <polygon class="dxd-icon-fill" points="4,2 4,22 22,12 " />
+
+    </svg>
+    </script>
 
 @(Html.DevExpress().ReportDesigner("reportDesigner").Height("1000px").DataSources(dataSources =>
 {
@@ -33,3 +52,22 @@
     events.CustomizeMenuActions("customizeActions");
 }))
 
+<div class="modal" tabindex="-1" role="dialog" id="addApi">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
